# axiom

./: .gitignore  .travis.yml  LICENSE  README.md  axiom.cabal  errs  ghcjs-hplay.cabal  haskell--js-reactive-widgets.cabal  hplayground.cabal  playground.cabal  stack-ghcjs.yaml  stack.yaml  stack.yaml1  wrong.html
main/: Builder.jsmod  Main.jsmod  View.jsmod
main/Haste/: Perch.jsmod
src/: Builder.hi  Builder.hs  Cell.hs  Main.hi  Main.hs  Main.html  Main.js  View.hi  View.hs  main.hi  main.js
src/GHCJS/HPlay/: Cell.IOref.hs  Cell.hs  View.hi  View.hs  View.hs.elem.back  View.hs.elem2.back  View.hs.repeat.back  ViewFormElm.hs  WebSockets.hs
src/Haste/: Perch.hs
src/Haste/HPlay/: Cell.hs  Console.hs  View - copia.hs  View.hs  View1.hs  View2.hs  View3.hs  View4.hs  View5.hs  WebSockets.hs  WebSockets.typeevents.hs  WebSockets1.hs
src/Haste/HPlay/View/: Poli.hs
src/main/: Builder.jsmod  Main.jsmod  View.jsmod
src/main/Haste/: Perch.jsmod
tests/: test.hs
