name: axiom

version: 0.4.6
cabal-version: >=1.10
build-type: Simple

license: MIT
license-file: LICENSE
author: Alberto Gómez Corona
maintainer: agocorona@gmail.com

homepage: https://github.com/transient-haskell/axiom
bug-reports: https://github.com/transient-haskell/axiom/issues
synopsis: Web EDSL for running in browsers and server nodes using transient
description: Client-and Server-side Haskell framework that compiles to javascript with the GHCJS compiler and run over Transient.  See homepage
category: Web
cabal-version: >=1.10
build-type: Simple
stability: experimental

data-dir: ""
extra-source-files: README.md

source-repository head
    type: git
    location: http://github.com/agocorona/ghcjs-hplay

library
     build-depends: base               > 4.0  && <6.0
                  , transformers       -any
                  , containers         -any
                  , transient          >= 0.5.9.2
                  , transient-universe >= 0.4.6.1

                  , mtl                -any
                  , ghcjs-perch        >= 0.3.3

    if impl(ghcjs >=0.1)
        build-depends: ghcjs-base -any
    else
        build-depends: bytestring, directory

    exposed-modules: GHCJS.HPlay.View
                     GHCJS.HPlay.Cell
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src .
