name: ghcjs-hplay
version: 0.3.4.2
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: agocorona@gmail.com
stability: experimental
homepage: https://github.com/agocorona/ghcjs-hplay
bug-reports: https://github.com/agocorona/hplayground/issues
synopsis: Client-side web EDSL for transient nodes running in the web browser
description: Client-side Haskell framework that compiles to javascript with the GHCJS compiler and run over Transient.  See homepage
category: Web
author: Alberto Gomez Corona
data-dir: ""
extra-source-files: src/Main.hs src/Main.html

source-repository head
    type: git
    location: http://github.com/agocorona/ghcjs-hplay

library
     build-depends: base               > 4.0  && <6.0
                  , transformers       -any
                  , containers         -any
                  , transient          >= 0.4.4
                  , transient-universe >= 0.3.5
                  , mtl                -any
                  , ghcjs-perch        -any

    if impl(ghcjs >=0.1)
        build-depends: ghcjs-base -any

    exposed-modules: GHCJS.HPlay.View
                     GHCJS.HPlay.Cell
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src .
