name: ghcjs-hplay
version: 0.2
cabal-version: >= 1.8
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: agocorona@gmail.com
stability: experimental
homepage: https://github.com/agocorona/hplayground
bug-reports: https://github.com/agocorona/hplayground/issues
synopsis: monadic, reactive Formlets running in the Web browser
description: client-side haskell framework that compiles to javascript with the ghcjs compiler. See homepage
category: Web
author: Alberto Gomez Corona
data-dir: ""
extra-source-files: src/Main.hs src/Main.html

source-repository head
    type: git
    location: http://github.com/agocorona/ghcjs-hplay



library
    if impl(ghcjs >= 0.1)
        build-depends: base >4.0 && <5, ghcjs-base,transformers, containers, transient==0.2,
                       data-default, mtl, ghcjs-perch, ghcjs-base
        exposed: True
        buildable: True
    else
        build-depends: base >4.0 && <5, transformers, containers, transient==0.2,
                       data-default, mtl, ghcjs-perch
        exposed: True
        buildable: True

    exposed-modules: GHCJS.HPlay.View GHCJS.HPlay.Cell
    exposed: True
    buildable: True
    hs-source-dirs: src .



