name: ghcjs-hplay
version: 0.2
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: agocorona@gmail.com
stability: experimental
homepage: https://github.com/agocorona/hplayground
bug-reports: https://github.com/agocorona/hplayground/issues
synopsis: monadic, reactive Formlets running in the Web browser
description: client-side haskell framework that compiles to javascript with the ghcjs compiler. See homepage
category: Web
author: Alberto Gomez Corona
data-dir: ""
extra-source-files: src/Main.hs src/Main.html
 
source-repository head
    type: git
    location: http://github.com/agocorona/ghcjs-hplay
 
library
    build-depends: transformers >=0.4.3.0 && <0.5
     
    if impl(ghcjs >=0.1)
        build-depends: base >4.0 && <5, ghcjs-base -any, transformers -any,
                       containers -any, transient ==0.2, mtl -any, ghcjs-perch -any,
                       ghcjs-base -any
        exposed-modules: GHCJS.HPlay.View GHCJS.HPlay.Cell
        exposed: True
        buildable: True
    else
        build-depends: base >4.0 && <5, transformers -any, containers -any,
                       transient ==0.2, mtl -any, ghcjs-perch -any
        exposed-modules: GHCJS.HPlay.View GHCJS.HPlay.Cell
        exposed: True
        buildable: True
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src .
 
 